ibm-mq/1.6/modules/ROOT/pages/ibm-mq-examples.adoc
= IBM MQ Connector Examples - Mule 4

To fully benefit from using Anypoint Connector for IBM MQ (IBM MQ Connector), see the following examples of configuring the connector operations:

* xref:ibm-mq-ack.adoc[Manage Message Acknowledgments] +
Configure IBM MQ Connector to manage different acknowledgment configurations, such as automatic acknowledgment on success, immediate acknowledgment, and manual acknowledgment.
* xref:ibm-mq-listener.adoc[Listen for New Messages] +
Configure the *Listener* source with the JMS Connector to consume messages as they arrive at the destination.
* xref:ibm-mq-publish.adoc[Publish New Messages] +
Configure the *Publish* operation to create a new JMS message and send it to the specified destination.
* xref:ibm-mq-consume.adoc[Consume Messages] +
Configure the *Consume* operation to consume a message at any given time in the flow, from any given destination.
* xref:ibm-mq-publish-consume.adoc[Publish Messages and Listen for Replies] +
Configure the *Publish consume* operation to publish a message to any exchange, and then wait for a reply on a different destination.
* xref:ibm-mq-transactions.adoc[Manage Transactions] +
Configure IBM MQ Connector to manage transactional connections to execute a series of operations.
* xref:ibm-mq-topic-subscription.adoc[Configure Topic Subscription] +
Configure topic subscriptions in IBM MQ Connector to control how subscriptions behave regarding the connection of the consumers and also how these consumers interact with each other.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
